snapshot-tests/tests/snapshots/parser__bad_underscores__double.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-integer]: 
  ┌─ double:1:9
  │
1 │ foo = 0__0
  │         ^ invalid integer: underscores must be between two digits
